--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,10 @@
     <string name="tab_neighbour_title">My neighbours</string>
     <string name="tab_favorites_title">Favorites</string>
     <string name="neighbour_name">Neighbour name</string>
-    <string name="phone_number">01 42 92 81 00</string>
-    <string name="social_media_links">www.facebook.com/example www.instagram.com/example www.twitter.com/example</string>
+    <string name="phone_number">+33 6 86 57 90 14</string>
+    <string name="social_media_links">www.facebook.com/caroline</string>
     <string name="about">A propos de moi</string>
-    <string name="biography"> Et est admodum mirum videre plebem innumeram mentibus ardore quodam infuso cum dimicationum curulium eventu pendentem. haec similiaque memorabile nihil vel serium agi Romae permittunt. </string>>
-    <string name="address">55 Rue du Faubourg Saint-Honoré, 75008 Paris</string>
+    <string name="biography">Bonjour, je souhaiterai faire de la marche nordique. Pas initiée, je recherche une ou plusieurs personnes susceptibles de m\'accompagner! J\'aime les jeux de cartes tels la belote et le tarot.</string>>
+    <string name="address">Saint pierre du mont à 5km</string>
     <string name="back_button">back button</string>
 </resources>
